# klank

./: .dockerignore  .gitignore  AGENTS.md  CATALOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  migrations.json  nx.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  turbo.json
.agentkit/: manifest.json
.agentkit/cli/src/: doctor.ts  emit.ts  findings.ts  generate.ts  model.ts  package.json  pnpm-lock.yaml  rules.ts  scaffold.ts  schema.ts  tsconfig.json  util.ts  validate.ts
.agentkit/commands/: sync-check.md
.agentkit/instructions/: agentkit-authoring-principles.md  design-principles.md  dev-principles.md  doc-principles.md  overview.md  review-principles.md  security-principles.md  test-principles.md
.agentkit/subagents/: content-reviewer.md  documentation-specialist.md  frontend-engineer.md  music-theory-expert.md  orchestrator.md  platform-engineer.md  tauri-engineer.md  tester.md  ux-designer.md
.claude/agents/: content-reviewer.md  documentation-specialist.md  frontend-engineer.md  music-theory-expert.md  orchestrator.md  platform-engineer.md  tauri-engineer.md  tester.md  ux-designer.md
.claude/commands/: sync-check.md
.claude/rules/: agentkit-authoring-principles.md  doc-principles.md  test-principles.md
.claude/skills/add-hook/: SKILL.md
.claude/skills/add-role/: SKILL.md
.claude/skills/add-skill/: SKILL.md
.claude/skills/agentkit-install/: SKILL.md
.claude/skills/agentkit-tighten/: SKILL.md
.claude/skills/audit-agent-setup/: SKILL.md
.claude/skills/ci-pipeline-optimize/: SKILL.md
.cursor/commands/: sync-check.md
.cursor/rules/: agentkit-authoring-principles.mdc  doc-principles.mdc  test-principles.mdc
.github/: copilot-instructions.md
.github/agents/: add-hook.agent.md  add-role.agent.md  add-skill.agent.md  audit-agent-setup.agent.md  build.agent.md  ci-pipeline-optimize.agent.md  cleanup-recent-changes.agent.md  content-reviewer.agent.md  documentation-specialist.agent.md  frontend-engineer.agent.md  music-theory-expert.agent.md  new-lib.agent.md  orchestrator.agent.md  platform-engineer.agent.md  run-tests.agent.md  run.agent.md  tauri-engineer.agent.md  tester.agent.md  update-dependencies.agent.md  update-docs.agent.md  ux-designer.agent.md
.github/instructions/: agentkit-authoring-principles.instructions.md  doc-principles.instructions.md  test-principles.instructions.md
.github/prompts/: sync-check.prompt.md
.github/workflows/: Build_and_Release_workflow.yml  build-android.yml  build-pr.yml  ci.yml  docker.yml  release-windows.yml  release.yml
apps/klank/: README.md  package.json  project.json  styles.css  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/klank-e2e/: cypress.config.ts  package.json
apps/klank/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/klank/src-tauri/capabilities/: default.json  desktop.json  ug-scraper.json
apps/klank/src-tauri/crates/core/: Cargo.toml
apps/klank/src-tauri/crates/core/src/: fs.rs  git.rs  jam-lite.html  jam.rs  lib.rs
apps/klank/src-tauri/crates/core/src/import/: mod.rs  pipeline.rs
apps/klank/src-tauri/crates/core/src/import/stages/: mod.rs  ug_mobile_api.rs  ug_website.rs
apps/klank/src-tauri/crates/server/: Cargo.toml
apps/klank/src-tauri/crates/server/src/: fs_routes.rs  git_routes.rs  import_routes.rs  jam_routes.rs  main.rs  tests.rs
apps/klank/src-tauri/icons/: icon.icns
apps/klank/src-tauri/permissions/: allow-deliver-ug-html.toml  allow-git.toml  allow-jam.toml  allow-report-ug-challenge.toml  allow-report-ug-error.toml  allow-scrape-ug.toml
apps/klank/src-tauri/src/: git.rs  jam-lite.html  jam.rs  lib.rs
apps/klank/src-tauri/src/import/: mod.rs  pipeline.rs
apps/klank/src-tauri/src/import/stages/: mod.rs  ug_mobile_api.rs  ug_website.rs  ug_webview.rs
apps/klank/src-tauri/tauri-plugin-multicast-lock/: Cargo.toml  build.rs
apps/klank/src-tauri/tauri-plugin-multicast-lock/android/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
apps/klank/src-tauri/tauri-plugin-multicast-lock/android/src/main/: AndroidManifest.xml
apps/klank/src-tauri/tauri-plugin-multicast-lock/android/src/main/java/io/github/hampterworks/klank/multicastlock/: MulticastLockPlugin.kt
apps/klank/src-tauri/tauri-plugin-multicast-lock/permissions/autogenerated/: reference.md
apps/klank/src-tauri/tauri-plugin-multicast-lock/permissions/autogenerated/commands/: acquire.toml  release.toml
apps/klank/src-tauri/tauri-plugin-multicast-lock/permissions/schemas/: schema.json
apps/klank/src-tauri/tauri-plugin-multicast-lock/src/: lib.rs
apps/klank/src-tauri/tauri-plugin-ug-scraper/: Cargo.toml  build.rs
apps/klank/src-tauri/tauri-plugin-ug-scraper/android/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
apps/klank/src-tauri/tauri-plugin-ug-scraper/android/src/main/java/io/github/hampterworks/klank/ugscraper/: UgScraperPlugin.kt
apps/klank/src-tauri/tauri-plugin-ug-scraper/permissions/autogenerated/: reference.md
apps/klank/src-tauri/tauri-plugin-ug-scraper/permissions/autogenerated/commands/: scrape.toml
apps/klank/src-tauri/tauri-plugin-ug-scraper/permissions/schemas/: schema.json
apps/klank/src-tauri/tauri-plugin-ug-scraper/src/: lib.rs
apps/web/: .gitignore  next.config.mjs  package.json  tsconfig.json
docker/nginx/: default.conf.template
docs/: dark-mode-audit.md  server-api.md
docs/agents/: ARCHITECTURE.md  README.md  agent-setup.md
docs/design/: metronome-tuner-ux.md  metronome-tuner-visual.md
e2e/: inline-panels.spec.ts  mobile-panels.spec.ts  ui-changes.spec.ts
libs/audio/: package.json  tsconfig.lib.json  tsconfig.spec.json  vite.config.ts
libs/platform-api/: README.md  package.json  vite.config.ts
libs/store/: README.md  package.json  tsconfig.lib.json  tsconfig.spec.json  vite.config.ts
libs/ui/: README.md  eslint.config.mjs  package.json  tsconfig.lib.json  vite.config.ts
tools/chord-data/: generate-chord-data.ts  package.json  project.json  seeds.ts  tsconfig.json  voicing-search.ts
(+239 files in other folders)
