[package]
name = "Klank"
version = "2.0.0"
description = "Sheet management"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tokio = { version = "1", features = ["sync", "time", "net", "rt-multi-thread", "io-util"] }
axum = { version = "0.7", default-features = false, features = ["ws", "http1", "tokio"] }
tauri-plugin-log = "2.0.0"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2.0"
tauri-plugin-http = "2.5.9"
# Tab import pipeline (Workstream A).
# rustls avoids cross-compiling OpenSSL for Android.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli"] }
async-trait = "0.1"
md5 = "0.7"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rand = "0.8"
html-escape = "0.2"
# Git sync (Workstream B). Vendored so it cross-compiles to Android without a
# system libgit2/openssl; https only (PAT auth), ssh dropped.
git2 = { version = "0.19", default-features = false, features = ["https", "vendored-libgit2", "vendored-openssl"] }
# Android-only scraper plugin (self-owned WebView). No-op shell on desktop.
tauri-plugin-ug-scraper = { path = "tauri-plugin-ug-scraper" }

# Size-optimized release profile. The unstripped native cdylib is the dominant
# source of APK bloat; `strip` alone reclaims the bulk of it, the rest trims
# further. `panic = "abort"` is the only line with breakage risk - drop it first
# if a build regresses.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
